# xacrodoc

./: .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  package.xml  pyproject.toml  pytest.ini  setup.py
docs/: requirements.txt
docs/src/: conf.py  index.rst  reference.rst
scripts/: compare_xml_doc_copy.py  compile_mjcf_min_inertia.py  ur10.urdf
src/xacrodoc/: __init__.py  cli.py  color.py  packages.py  substitution_args.py  version.py  xacro.py  xacrodoc.py  xmlutils.py
tests/: out.urdf  test_cli.py  test_extra_packages.py  test_mjcf.py  test_xacrodoc.py
tests/files/: combined.urdf  combined.urdf.xacro  combined_from_arg.urdf.xacro  compile_xacro.sh  tool.urdf  tool.urdf.xacro  tool2.urdf
tests/files/assets/: mesh.urdf.xacro
tests/files/mjcf/: threelink.xml
tests/files/xacro/: combined_from_arg.urdf.xacro  mesh.urdf.xacro  mesh2.urdf.xacro  mesh_different_packages.urdf.xacro  mesh_external_package.urdf.xacro  mesh_rel_path.urdf.xacro  mesh_with_spaces.urdf.xacro  threelink.urdf.xacro  threelink_mujoco.urdf.xacro  tool.urdf.xacro
xacrodoc/: __init__.py
