[project]
name = "xacrodoc"
version = "0.7.0"
description = "Compile xacro files to URDF or MJCF from Python or the command line (no ROS required)."
authors = [
  {name = "Adam Heins", email = "mail@adamheins.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pyyaml>=6.0",
  "rospkg>=1.5.0",
  "docutils!=0.21",
]

[project.optional-dependencies]
mujoco = [
    "mujoco>=3.2.3",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
]

[project.scripts]
xacrodoc = "xacrodoc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80

[tool.pytest.ini_options]
norecursedirs = "tests/packages"
