[project]
name = "xacrodoc"
version = "2.0.1"
description = "Compile xacro files to URDF or MJCF from Python or the command line (no ROS required)."
authors = [
  {name = "Adam Heins", email = "mail@adamheins.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "rospkg>=1.5.0",
  "xacro>=2.1.1",
]

[project.optional-dependencies]
mujoco = [
    "mujoco==3.2.3; python_version == '3.8'",
    "mujoco==3.3.7; python_version == '3.9'",
    "mujoco>=3.4.0; python_version > '3.9'",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0",
]
docs = [
  "linkify-it-py>=2.0.3",
  "myst-parser>=3.0.1",
  "sphinx>=7.1.2",
  "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
xacrodoc = "xacrodoc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev", "docs"]

[tool.black]
line-length = 80

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = "tests/packages"
